patch particle name changes (??)