@@ -23,10 +23,10 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
-                    <enablePreview>true</enablePreview>
+<!--                    <enablePreview>true</enablePreview>-->
                     <compilerArgs>
                         <arg>-parameters</arg>
-                        <arg>--enable-preview</arg>
+<!--                        <arg>&#45;&#45;enable-preview</arg>-->
                     </compilerArgs>
                 </configuration>
             </plugin>
@@ -35,7 +35,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.5.0</version>
                 <configuration>
-                    <additionalOptions>--enable-preview</additionalOptions>
+<!--                    <additionalOptions>&#45;&#45;enable-preview</additionalOptions>-->
                     <release>${java.version}</release>
                     <detectLinks>true</detectLinks>
                     <dependencyLinks>
@@ -190,6 +190,12 @@
             <groupId>co.aikar</groupId>
             <artifactId>acf-paper</artifactId>
             <version>0.5.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.46.0.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
